I got the tutorial to work on mistral

--- a/predict-motion.ipynb
+++ b/predict-motion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +18,7 @@
     "\n",
     "\n",
     "import torch.nn.functional as F\n",
-    "from torch.nn import (\n",
-    "    Sequential as Seq,\n",
-    "    Linear as Lin,\n",
-    "    ReLU,\n",
-    "    BatchNorm1d,\n",
-    "    AvgPool1d,\n",
-    "    Sigmoid,\n",
-    "    Conv1d,\n",
-    ")\n",
+    "\n",
     "\n",
     "from deepsetmodel import *\n",
     "\n",
@@ -105,7 +97,7 @@
     "train_data = Data(testset[testset['data_type'] == 'train'])\n",
     "test_data = Data(testset[testset['data_type'] == 'test']) \n",
     "\n",
-    "batch_size = 32\n",
+    "batch_size = 12\n",
     "\n",
     "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -137,40 +129,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# TFIDF is quiet big so i may have to reduce the hiden layers width\n",
     "input_size = train_data.supports[0].shape[0]\n",
     "max_len_brief = train_data.max_len_brief\n",
     "\n",
     "# the latent space has the be atleast the size of the input\n",
-    "hidden1 = int(input_size /5)\n",
-    "hidden2 = int(hidden1 / 4)\n",
-    "hidden3 = int(hidden2 / 3)\n",
-    "classify1 = int(hidden3 /2)\n",
+    "hidden1 = input_size #int(input_size /2)\n",
+    "hidden2 = input_size #int(hidden1 / 3)\n",
+    "hidden3 =  input_size#int(hidden2 / 5)\n",
+    "classify1 = input_size #int(hidden3 /10)\n",
     "\n",
     "models = {}\n",
     "optimizers = {}\n",
+    "                    # There is an issue with MNIST_Adder.\n",
+    "                    # It sums accross sets instead of elements in the set\n",
     "\n",
-    "models[\"support\"] = DeepSets(input_size, max_len_brief , hidden1, hidden2, hidden3, classify1).to(device)\n",
+    "model = DeepSetsCNN(input_size,max_len_brief,  hidden1, hidden2, hidden3, classify1)\n",
     "\n",
-    "#models[\"opposition\"] = DeepSets(input_size,max_len_brief,  hidden1, hidden2, hidden3, classify1).to(device)\n",
+    "models[\"support\"] = torch.nn.DataParallel( model , device_ids=[0, 1, 2, 3]) #.to('cuda:0') #M\n",
     "\n",
-    "#models[\"both\"] =\n",
-    "\n",
-    "## what does Bachnorm and conv1d work?\n",
+    "models[\"support\"].to(device)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "optimizers[\"suppport\"] = torch.optim.Adam(models[\"support\"].parameters(), lr=1e-4)\n",
+    "#optimizers[\"support_alt\"] = torch.optim.Adam(models[\"support_alt\"].parameters(), lr=1e-4)\n",
+    "\n",
     "#optimizers[\"opposition\"] = torch.optim.Adam(models[\"opposition\"].parameters(), lr=1e-2)\n",
     "#optimizers[\"both\"] = torch.optim.Adam(models[\"both\"].parameters(), lr=1e-2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,48 +175,48 @@
     "y = y.to(device)\n",
     "\n",
     "outputs= models[\"support\"](supports)\n",
-    "loss_fn= nn.BCELoss()"
+    "loss_fn= nn.BCELoss()\n",
+    "loss_fn(outputs, outputs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.6805, device='mps:0', grad_fn=<BinaryCrossEntropyBackward0>)"
+       "(torch.Size([12, 49390, 8]), 49390, torch.Size([8, 49390, 12]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loss_fn(outputs, outputs)"
+    "supports.shape, input_size ,supports.T.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(y)\n"
+    "\n",
+    "\n",
+    "torch.cuda.empty_cache()\n",
+    "torch.cuda.synchronize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -235,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm.notebook import tqdm\n",
     "\n",
     "@torch.no_grad()\n",
-    "def test(model, loader, total, batch_size, leave=False , datatype='support', loss_fn= nn.BCELoss()):\n",
+    "def test(model, loader, total, batch_size, leave=False , datatype='support', loss_fn= nn.BCELoss(), device = device):\n",
     "    \n",
     "    model.eval()\n",
     "\n",
@@ -281,10 +273,10 @@
     "        t.refresh()\n",
     "    # what is the (i+1) for?\n",
     "        \n",
-    "    return sum_loss  / (i + 1) , sum_acc / len(loader.dataset)\n",
+    "    return sum_loss  / len(loader.dataset), sum_acc / len(loader.dataset)\n",
     "\n",
     "\n",
-    "def train(model, optimizer, loader, total, batch_size, leave=False, datatype='support', loss_fn= nn.BCELoss()):\n",
+    "def train(model, optimizer, loader, total, batch_size, leave=False, datatype='support', loss_fn= nn.BCELoss(), device = device):\n",
     "    model.train()\n",
     "\n",
     "    sum_loss = 0.0\n",
@@ -318,7 +310,7 @@
     "        t.set_description(f\"batch_loss_{datatype}: {loss.item():.4f} \\t| sum_loss_{datatype}: {sum_loss:.4f}\")\n",
     "        t.refresh()\n",
     "\n",
-    "    return sum_loss / (i + 1)"
+    "    return sum_loss / len(loader.dataset)"
    ]
   },
   {
@@ -330,13 +322,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7de0b83e62bc4b0cafa44e671a569ca3",
+       "model_id": "8752902242d3463b9bfd41be6561a1cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,12 +342,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b76ea8fadcd34e82a7590c6827ead441",
+       "model_id": "06757c2b5019493ea4f82fcea5fa3ef6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -364,12 +356,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "417079f663c147a592e5eeb9bb04c4b2",
+       "model_id": "9f6887be89ee498ab15a55e4615778df",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -379,20 +371,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 00, Training Loss:   0.0131\n",
-      "           Validation Loss: 0.7330\n",
-      "           Validation Accuracy: 0.5800\n"
+      "Epoch: 00, Training Loss:   0.0581\n",
+      "           Validation Loss: 0.0586\n",
+      "           Validation Accuracy: 0.4320\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f3fabf38c194e368ed96749fbd16389",
+       "model_id": "4ca299df9aff41df9f1e546fa77abf37",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -401,12 +393,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d03e3beed43f4a978d65dbaf6d21e6d5",
+       "model_id": "725bb12d5037430b96fd93da223ddf3a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -416,58 +408,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Training Loss:   0.0135\n",
-      "           Validation Loss: 0.7111\n",
-      "           Validation Accuracy: 0.5840\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c7d3d852386479183cd97d785c255fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "878d031277f34be19a2ecc1ee79db638",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 02, Training Loss:   0.0146\n",
-      "           Validation Loss: 0.7350\n",
-      "           Validation Accuracy: 0.6120\n",
+      "Epoch: 01, Training Loss:   0.0373\n",
+      "           Validation Loss: 0.2112\n",
+      "           Validation Accuracy: 0.5520\n",
       "Stale epoch\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01c162a9ed7a485e91dea54b1025c33a",
+       "model_id": "1aa3cbf979c947cd85ff2969a3893b1c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -476,12 +431,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caac24e434bf47f8bc418aae5ffb43f7",
+       "model_id": "2541ce9c93e8454986c3659a54fc5238",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -491,8 +446,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 03, Training Loss:   0.0105\n",
-      "           Validation Loss: 0.7957\n",
+      "Epoch: 02, Training Loss:   0.0441\n",
+      "           Validation Loss: 0.3530\n",
+      "           Validation Accuracy: 0.5200\n",
+      "Stale epoch\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7aab3299bd74498e86ccfe2a0763d530",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58c29fd7cb3a4fdb9af900e5f8ca1223",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 03, Training Loss:   0.0073\n",
+      "           Validation Loss: 0.1367\n",
+      "           Validation Accuracy: 0.5640\n",
+      "Stale epoch\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ef5a59a4abfe41e78fe4e58d119f19d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "719315886726424da11ac08cc8f6557a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 04, Training Loss:   0.0014\n",
+      "           Validation Loss: 0.1362\n",
       "           Validation Accuracy: 0.5720\n",
       "Stale epoch\n"
      ]
@@ -500,12 +531,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "589475d7d2e94893947377d79409e408",
+       "model_id": "37d7c1735d8b4f64829e0c082be8aaba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -514,12 +545,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55a0e2f8a09a4a00b2e0e386839b2ed6",
+       "model_id": "95e661741a3c4289a7dba3e403b8e8d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
+       "  0%|          | 0/20.833333333333332 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -529,85 +560,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 04, Training Loss:   0.0126\n",
-      "           Validation Loss: 0.8627\n",
-      "           Validation Accuracy: 0.5840\n",
-      "Stale epoch\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "659ff0732e81465b82c39812e22803a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e5f7a983f048bd9b67afa3f8f93955",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 05, Training Loss:   0.0068\n",
-      "           Validation Loss: 0.9237\n",
-      "           Validation Accuracy: 0.5920\n",
-      "Stale epoch\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4f59e9ab54a4bafa7316d5d590ba658",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f21a4c28e0d43dc8a64113f63b566b1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7.8125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 06, Training Loss:   0.0087\n",
-      "           Validation Loss: 0.9712\n",
-      "           Validation Accuracy: 0.5800\n",
+      "Epoch: 05, Training Loss:   0.0001\n",
+      "           Validation Loss: 0.1553\n",
+      "           Validation Accuracy: 0.5600\n",
       "Stale epoch\n",
       "Early stopping after 5 stale epochs\n"
      ]
@@ -629,7 +584,8 @@
     "        loader=train_loader, \n",
     "        total=len(train_data), \n",
     "        batch_size=batch_size, \n",
-    "        leave=bool(epoch == n_epochs - 1) \n",
+    "        leave=bool(epoch == n_epochs - 1),\n",
+    "        device = \"cuda:0\" \n",
     "    )\n",
     "    \n",
     "    \n",
@@ -639,7 +595,8 @@
     "        total=len(test_data), \n",
     "        batch_size=batch_size, \n",
     "        leave=bool(epoch == n_epochs - 1),\n",
-    "        datatype='support'\n",
+    "        datatype='support',\n",
+    "        device = \"cuda:0\"\n",
     "    )\n",
     "\n",
     "    print(\"Epoch: {:02d}, Training Loss:   {:.4f}\".format(epoch, avg_loss))\n",
@@ -1011,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
